syntax = "proto3";

import "mod_dummy_models.proto";

package v2.mod_services;

option go_package = "github.com/amplify-edge/mod/mod-dummy/service/go/rpc/v2";

service DummyService {
  rpc GetAccount(v2.mod_services.GetAccountRequest) returns (v2.mod_services.Account) {};
 
}
